# imageinsa

./: .gitmodules  README.md
app/: imageinsa_fr.ts
app/Operations/: CombineColorOp.h  EntropyOp.cpp  ThresholdDialog.cpp
lib/detiq-t/: .gitignore  CMakeLists.txt  README.md
lib/detiq-t/Applications/: CMakeLists.txt
lib/detiq-t/Applications/BasicApplication/: BasicAlgorithmService.cpp  BasicAlgorithmService.h  main.cpp
lib/detiq-t/Applications/Binarization/: main.cpp
lib/detiq-t/Applications/Binarization/Services/: BasicTools.cpp  BasicTools.h  BinarizationService.cpp  BinarizationService.h
lib/detiq-t/Applications/Binarization/Widgets/: BinarizationWidget.cpp  BinarizationWidget.h
lib/detiq-t/Applications/BitPlane/: main.cpp
lib/detiq-t/Applications/BitPlane/Services/: BitPlaneService.cpp  BitPlaneService.h
lib/detiq-t/Applications/BitPlane/Widgets/: BitPlaneChoice.cpp  BitPlaneChoice.h  BitPlaneWindow.cpp  BitPlaneWindow.h
lib/detiq-t/Applications/ComponentLabeling/: ComponentLabelingService.cpp  ComponentLabelingService.h  OptionsWidget.cpp  OptionsWidget.h  ResultWidget.cpp  ResultWidget.h  main.cpp
lib/detiq-t/Applications/Dithering/: DitheringService.cpp  DitheringService.h  main.cpp
lib/detiq-t/Applications/FiltrMe/: FilteringService.cpp  FilteringService.h  main.cpp
lib/detiq-t/Applications/FiltrMe/Widgets/: FilterChoice.cpp  FilterChoice.h  FilterEditor.cpp  FilterEditor.h  FilterEditorItem.cpp
lib/detiq-t/Applications/MorphoMat/: main.cpp
lib/detiq-t/Applications/MorphoMat/Services/: MorphoMatService.cpp  MorphoMatService.h
lib/detiq-t/Applications/MorphoMat/Widgets/: StructElemViewer.cpp  StructElemViewer.h  StructElemWindow.cpp  StructElemWindow.h
lib/detiq-t/GenericInterface/: CMakeLists.txt  Exceptions.h  GenericInterface.cpp  GenericInterface.h  InterfaceExceptions.h  Service.h  ServiceExceptions.h  genericinterface_en.ts  genericinterface_fr.ts  res.qrc
lib/detiq-t/GenericInterface/Services/: AlgorithmService.cpp  AlgorithmService.h  FileService.cpp  FileService.h  Node.h  UtilityService.cpp  UtilityService.h  WindowService.cpp  WindowService.h
lib/detiq-t/GenericInterface/Utilities/: Log.cpp  Log.h
lib/detiq-t/GenericInterface/Widgets/: AboutDialog.cpp  AboutDialog.h  ImageListBox.h
lib/detiq-t/GenericInterface/Widgets/ImageWidgets/: AlternativeImageView.cpp  AlternativeImageView.h  DoubleImageWindow.cpp  DoubleImageWindow.h  GenericHistogramView.cpp  GenericHistogramView.h  GenericHistogramWindow.cpp  GenericHistogramWindow.h  GraphicalHistogram.cpp  GraphicalHistogram.h  GridView.cpp  GridView.h  GridWindow.cpp  GridWindow.h  HistogramPicker.cpp  HistogramPicker.h  HistogramView.cpp  HistogramView.h  HistogramWindow.cpp  HistogramWindow.h  ImageContextMenu.cpp  ImageContextMenu.h  ImageView.cpp  ImageView.h  ImageViewer.cpp  ImageViewer.h  ImageWidget.cpp  ImageWidget.h  ImageWindow.cpp  ImageWindow.h  PixelGrid.cpp  PixelGrid.h  ProjectionHistogramView.cpp  ProjectionHistogramView.h  ProjectionHistogramWindow.cpp  ProjectionHistogramWindow.h  RowView.cpp  RowView.h  RowWindow.cpp  RowWindow.h  (+6 more)
lib/detiq-t/GenericInterface/Widgets/NavBar/: ImageDelegate.cpp  ImageDelegate.h  NavigationBar.cpp  NavigationBar.h  NavigationDock.cpp  NavigationDock.h  NodeListModel.cpp  NodeListModel.h
lib/detiq-t/ImageIn/: Algorithm.h  Algorithm.tpp  AlgorithmCollection.h  AlgorithmException.h  Array.h  BadImageException.h  BinaryImage.cpp  BinaryImage.h  BmpImage.cpp  BmpImage.h  CMakeLists.txt  Converter.h  Converter.tpp  EasyBMP.cpp  GenericAlgorithm.h  GenericAlgorithm.tpp  Graph.cpp  Graph.h  GrayscaleImage.h  GrayscaleImage.tpp  Histogram.h  Histogram.tpp  Image.h  Image.tpp  ImageFile.h  ImageFileAbsFactory.cpp  ImageFileAbsFactory.h  ImageFileException.h  ImageFileFactory.cpp  ImageFileFactory.h  ImageIn.bkl  JpgImage.cpp  JpgImage.h  PixelAlgorithm.h  PngImage.cpp  PngImage.h  ProjectionHistogram.h  ProjectionHistogram.tpp  Rectangle.h  RgbImage.h  (+10 more)
lib/detiq-t/ImageIn/Algorithm/: Average.h  Binarization.h  Binarization.tpp  BitPlane.h  ComponentLabeling.h  ComponentLabeling.tpp  Difference.h  Distance.h  Dithering.h  Dithering.tpp  EdgeColoration.h  Filter.cpp  Filter.h  Filtering.cpp  Filtering.h  Identity.h  Inversion.h  MorphoMat.cpp  MorphoMat.h  Otsu.h  Otsu.tpp  RgbToGrayscale.h  RgbToGrayscale.tpp  mainFiltration.cpp
lib/detiq-t/Tests/Applications/BasicApplication/: Tests.cpp
lib/detiq-t/Tests/GenericInterface/: Tests.cpp
lib/detiq-t/Tests/ImageIn/: AlgorithmTest.h  BinarizationTester.h  BitPlaneTest.h  ComponentLabelingTest.h  ComponentLabelingTester.h  ConvertedTest.h  ConverterTest.h  ConverterTester.h  CopyTest.h  CoreTester.h  CropTest.h  FilteringTest.h  FilteringTester.h  HistogramTest.h  IOTest.h  IOTester.h  ImageDiff.h  MorphoMatTester.h  ProjHistTest.h  Test.h  Tester.h  UtilityTester.h  main.cpp
